# Toml2Ini_Converter

./: README.md  main.py  pyproject.toml
src/toml2spec/: __init__.py
