[project]
name = "toml2spec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PythonSwiftLink", email = "107263226+PythonSwiftLink@users.noreply.github.com" }
]
requires-python = ">=3.11.11"
dependencies = []

[project.scripts]
toml2spec = "toml2spec:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
